--- a/public/main.html
+++ b/public/main.html
@@ -110,6 +110,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
        <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/06.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/07.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/05_casa freesbee plantas de arquitectura/08.jpg" alt="Image 1">
+      <br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
@@ -123,6 +124,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <img class="lazyload" src="assets/img/07_casa_freesbee_x_sg/04.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/07_casa_freesbee_x_sg/05.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/07_casa_freesbee_x_sg/06.jpg" alt="Image 1">
+      <br>
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
     </div>
@@ -170,6 +172,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
        <img class="lazyload" src="assets/img/06_casa_freesbee_series/42.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/06_casa_freesbee_series/43.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/06_casa_freesbee_series/44.jpg" alt="Image 1">
+       <br>
       <p>Fotografías: Manuel Mensa, Renée Charmichael <br>
 Edición y secuenciación: Catalina Sfer Salas</p>
       <!-- Add more content here if needed -->
@@ -187,6 +190,7 @@ Edición y secuenciación: Catalina Sfer Salas</p>
       <br>
       <img class="lazyload" src="assets/img/02_avalos 2172_planos de arquitectura/01.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/02_avalos 2172_planos de arquitectura/02.jpg" alt="Image 1">
+      <br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
@@ -198,6 +202,7 @@ Edición y secuenciación: Catalina Sfer Salas</p>
       <img class="lazyload" src="assets/img/03_avalos 2172_fotos/02.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/03_avalos 2172_fotos/03.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/03_avalos 2172_fotos/04.jpg" alt="Image 1">
+      <br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
@@ -216,6 +221,7 @@ Edición y secuenciación: Catalina Sfer Salas</p>
       <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/03.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/04.jpg" alt="Image 1">
        <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/05.jpg" alt="Image 1">
+      <br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
@@ -229,6 +235,7 @@ Edición y secuenciación: Catalina Sfer Salas</p>
       <img class="lazyload" src="assets/img/09_casa gully_fotos/4.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/09_casa gully_fotos/5.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/09_casa gully_fotos/6.jpg" alt="Image 1">
+      <br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
@@ -345,6 +352,7 @@ En un sueño MsG dice “el problema con lo que vos haces es que es demasiado co
       <img class="lazyload" src="assets/img/12_estados de la arquitectura/30.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/12_estados de la arquitectura/31.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/12_estados de la arquitectura/32.jpg" alt="Image 1">
+      <br>
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <p>Dibujos, montajes, textos: Manuel Mensa, Lucas Torres Agüero, Matías Etchart</p>
       <!-- Add more content here if needed -->
@@ -381,6 +389,7 @@ En un sueño MsG dice “el problema con lo que vos haces es que es demasiado co
       <img class="lazyload" src="assets/img/10_el cuerpo hueco de la arquitectura/0-16.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/10_el cuerpo hueco de la arquitectura/0-17.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/10_el cuerpo hueco de la arquitectura/0-19.jpg" alt="Image 1">
+  <br>
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
     </div>
@@ -388,11 +397,13 @@ En un sueño MsG dice “el problema con lo que vos haces es que es demasiado co
       <h3>Architecture Postponed</h3>
       <p>An Architecture Museum</p><br>
       <p>A competition to design the New Architecture Pavilion is hold. The competition brief says “No distractions will allow the visitors to behold Architecture” A jury of ninety five prestigious architects is conformed. Entries from all over the world are received. The jury makes a decision. There is only one winner, no second or third prizes. “One winner” shouts the jury of ninety five prestigious architects. Once the winning project is unveiled, the winning architect says: “A great white shiny box contains all the contemporary architecture”. There is one door. </p> <br>
-      <img class="lazyload" src="assets/img/36_architecture postponed/01.jpg" alt="Image 1">
+      <br><img class="lazyload" src="assets/img/36_architecture postponed/01.jpg" alt="Image 1">
+       <br>
        <p>The New Architecture Pavilion holds a competition to decide which contemporary architecture will be contained inside. A jury of ninety five prestigious architects is conformed. “One winner” they say. Once the winning project is unveiled, the winning architect says: “A great white shiny box contains a great white shiny box that contains all the contemporary architecture”. There are two doors. A new competition to decide which is the contemporary architecture to be contained is hold. A jury of ninety five prestigious architects is conformed. “One winner” they shout. The winning architect says: “A great white shiny box contains a great white shiny box that contains a great white shiny box that contains all the contemporary architecture”. There are three doors.</p><br>
-      <img class="lazyload" src="assets/img/36_architecture postponed/02.jpg" alt="Image 1">
+     <br> <img class="lazyload" src="assets/img/36_architecture postponed/02.jpg" alt="Image 1">
+       <br>
        <p>A new competition is hold. One winner is all there is. The winning architect says “A great white shiny box contains a great white shiny box that contains a great white shiny box that contains a great white shiny box that contains all the contemporary architecture”. There are four doors. This was repeated a total of thirteen times. There are thirteen doors. </p>
-      <img class="lazyload" src="assets/img/36_architecture postponed/03.jpg" alt="Image 1">
+     <br> <img class="lazyload" src="assets/img/36_architecture postponed/03.jpg" alt="Image 1">
       <!-- Add more content here if needed -->
     </div>
    
@@ -679,9 +690,6 @@ Publicado en <i>Superdigital (Editor: Ciro Najle. CPAU 2018)</i>
 <br>Los proyectos están conformados de lo mismo que todos los proyectos de arquitectura, con una diferencia: se constituyen en el tipo de edificio al que se recurre para determinado fin (un trámite municipal o la visita a un familiar enfermo) pero que, una vez dentro, sin olvidar lo que había que hacer, lo único que importa es subir y bajar escaleras, abrir y cerrar puertas, volviendo sobre los propios pasos una y otra vez. Sintiendo un leve malestar pero sin distracciones de ninguna forma de entretenimiento, sino concentrados por descubrir qué es lo que el edificio pide de nosotros a través de sus elementos.<br>
       </p>
       <br>
-      <br>
-      <p><i>All of the projects in this book are made of walls, holes and doors. It’s the first thing to say, even if it is the most obvious because the same could be said for all of architecture. This obviousness emerges from the experience of any life that is implicated in terrestrial movements. Nevertheless, confirming it sounds provocative. What could be more liberating than to accept that these three elements concentrate all of the specificity of architecture? Reducing all architecture to walls, holes and doors is schematic. In this definition, the floors are horizontal walls and the stairs are the concatenation of tiny vertical walls with minuscule horizontal walls. These elemental restrictions are what allow a project’s next operation to be an expansive proliferation, where the number of elements and their combinations scale to quantities of many while their types retain their qualities. Faced with this redundancy and dominated by delusional reason, the projects concentrate forces to saturate them in a single behaviour that is characterised by simplicity, allowing the organisation of discrete elements to contrast in a controlled way with itself. The reasons why certain elements adopt forms, rhythms and positions are intertwined with the analogue purposes of other elements (the width of a room with the number of doors with the holes in the wall or the floor length with the slope of the next and its width). Through a slightly varied repetition, tending towards infinity, each project forms a type of variability, constituted by the possibility of its combinations, but without unfolding a large variety. Nevertheless, through the projects, a global and transversal character is built in which each process presents a singular variation (ramps and landings that bifurcate, modules that stack and move, rooms that shrink and enlarge). The relations that build the elements are, first, only among themselves and mediated by their dependencies: there are no doors without holes and no holes without walls. Later toilets, sinks, showers, kitchens, washbasins and beds are introduced, laden with only their attributes of conventional use so that they negotiate with the inertia that the elements build and are distributed in an analogic way. If the relations that the elements establish have the capacity to incorporate attributes, at first foreign but generating the appearance of having always been there, this happens because there really is nothing foreign, all is latently included from the beginning. A system that has the capacity to set in motion conventions and integrally include them can continue to do so with the certainty that it will not be captured by them. This guarantees self-imposed limitations that, although they are rudimentary, arithmetic and analogue, produce a split that allows the project to advance in tension with itself, accumulating these conventions and containing them in a concentric spiral always on the verge of escaping through tangents. Some effects are beyond the understanding of the projects: it is the infantilising effect of the limits. The projects understand, in an alternative way, what is supposed to be understood. This alternative has two main qualities: it allows for delirium in a nonalternative way, which includes transcending it, and it shows that the material conditions necessary for this alternative to exist already exist. An example of the first quality: the projects contain images of other projects without crystallising themselves in any of them. An example of the second quality: the projects stress the social rules that produce them, specifying them through architectural elements. Although they participate in the construction of the conditions that make possible their existence in the world, that which maintains them, the projects would need to absorb a high amount of conventions which would reduce their brilliance and would allow them to hide in a mimetic appearance. The project’s actual state is more fleeting and fantasy than rooted and imperceptible. These qualities bestow it with ambitions of universality and abstraction that interrupt the lines that lead it to territories foreign to itself. In the same way that the organisation of a wall organises the inclusion of a toilet, it could continue incorporating more objects (which is where conventions are hiding): armchairs, basketball hoops, blenders, bookshelves, bottles, bricks, cabinets, ceiling lamps, chairs, cladding, coffee pots, computers, countertops, display counters, doorframes, generators, gowns, guitars, handles, latches, microscopes, nightstands, paintings, sectional boards, sewer pipes, shoes, shutters, speakers, stoves, televisions, vases, ventilators, vents, water tanks. Due to the way in which the projects build their organisation, they have the possibility to include conventions that are, and at the same time very explicit, so that they build a substrate that, due to the excess that it shows, manages to conceal itself. The projects are made up of the same as all architectural projects, but with one difference: they constitute the type of building that is used for a set purpose (a municipal transaction or a visit to a sick family member), but in which, once inside, and without forgetting what had to be done, the only thing that matters is to go up and down stairs, to open and close doors, retracing one’s steps over and over again. Feeling a slight unease but without distractions from any type of entertainment, we concentrate to discover what the building asks of us through its elements.
-    </i>
       <p>Publicado en: <i>Arquitectura sin Estado: Albergar Multitudes (Archivos de Arquitectura, EAEU UTDT, 2018)</i></p>
       <!-- Add more content here if needed -->
     </div>
@@ -753,7 +761,7 @@ Publicado en <i>Superdigital (Editor: Ciro Najle. CPAU 2018)</i>
       <p>Personajes Sensibles</p>
       <br>
       <p>Ametralladora de Utopías se propone explorar la capacidad de las imágenes de utopías arquitectónicas para devolverle al presente de la arquitectura contemporánea la fuerza propositiva de la que carece. Frecuentemente desechadas como producto de sueños irrealizables, lo interesante de las utopías arquitectónicas no reside en aquello que se presenta como imposible sino en los materiales mismos de los que están hechas esas supuestas imposibilidades. Las técnicas de representación de las imágenes utópicas se vuelven la fuente y el medio a través del cual se procura despejar la retórica vacía, y la apariencia superficial para dejar relucir las organizaciones arquitectónicas grácilmente complejas. Mediante una serie de análisis se procura incrementar la imaginación técnica de las utopías enmarañándolas con sus conceptos y creando a partir de ellos una serie de personajes artificiales capaces de controlar y poner en marcha los proyectos que emergen de dichas relaciones.</p>
-      <img class="lazyload" src="assets/img/28_utopia machine gun/01.jpg" alt="Image 1">
+      <br><img class="lazyload" src="assets/img/28_utopia machine gun/01.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/28_utopia machine gun/03.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/28_utopia machine gun/04.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/28_utopia machine gun/05.jpg" alt="Image 1">
@@ -792,7 +800,7 @@ el momento exacto en el que se derrumba el complejo de viviendas Pruitt Igoe, mu
  
   
 </p>
-      <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/01.jpg" alt="Image 1">
+      <br><img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/01.jpg" alt="Image 1">
       <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/02.JPG" alt="Image 2">
       <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/03.jpg" alt="Image 3">
       <img class="lazyload" src="/assets/img/01_arquitectura_sin_estado/04.JPG" alt="Image 4">
