--- a/public/main.html
+++ b/public/main.html
@@ -226,9 +226,6 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <p>Planos</p>
       <br>
       <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/01.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/03.jpg" alt="Image 1">
-      <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/04.jpg" alt="Image 1">
-       <img class="lazyload" src="assets/img/09_casa gully_planos de arquitectura/05.jpg" alt="Image 1">
       <br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
@@ -320,7 +317,29 @@ En un sueño MsG dice “el problema con lo que vos haces es que es demasiado co
 <br><i>¿Cómo producir, y pensar, fragmentos que tengan entre sí relaciones de diferencia en tanto qué tal, que tengan como relaciones entre sí a su propia diferencia, sin referencias a una totalidad original incluso perdida, ni a una totalidad resultante incluso por llegar?
 
 <br>La Conversación Infinita
-<br>Maurice Blanchot</i>
+<br>Maurice Blanchot</i><br>
+          <br>
+          <br>
+<b>Gracia 01</b><br>
+<p>Para S.G.<br></p>
+
+<p>Con S.G. no hablamos casi de ninguna otra cosa que no sea la gracia. Hablamos sobre la gracia con risas histéricas o sobre la gracia como forma de espontaneidad y de perdida de sí: formas de conectar con algo divino. No es que decimos la palabra “gracia” una y otra vez, pero funciona como el plano sobre el que nos movemos, nos alejamos y nos acercamos en función de como conseguirla: si depende de un problema de época o en cambio de una aventura caótica de la existencia. Decir divino, en el contexto de nuestras conversaciones, es ya un problema porque cada uno entiende la divinidad de formas muy diferentes. Uno piensa que se consigue por ausencia y vaciamento, el otro por proliferación y exceso de pensamiento. Sin embargo hay una zona amorosa y destructiva donde nuestras ideas de gracia y divinidad se encuentran y, por momentos muy fugaces, se vuelven indiscernibles: pensamos que para diseñar una silla como la de Donald Judd hay que estar en un estado de inocencia tal que permita desconocer por completo la historia del mueble, y al mismo tiempo concebirla y fabricarla con gran precisión y técnica. Como si alguien hubiera conectado con la obviedad de una silla “un plano horizontal que sostiene, dos planos verticales que apoyan, etcetera…” M.L. nos diría que primero hay que saber lo que hicieron los demás para poder hacer lo propio. En cambio, junto con S.G., cuando no quedamos atrapados por olas que nos arrastran o pesos que nos sumergen, creemos que como alternativa al modo erudito enciclopédico, están el idiota frenético y el compulsivo delirante.</p> <br>
+  <br>
+          <br>
+      <b>Fuerza 01</b><br>
+      <p>Para L.V. <br>
+          Al salir de una fiesta L.V. dice que la gente era tan fea que le provocó nauseas. Alguién podría confundirse y pensar que en tal afirmación no hay más que un frívolo y estéril, que no esconde más que miedo a la diferencia. Quien piense así fracasaría en ver que L.V. no es jueza de un tribunal, sino que es una bruja con la capacidad de ver el “aura” de las personas. No en un sentido místico, esotérico, oculto o inaccesible. Todo lo contrario, L.V. es una médica materialista capaz de ver de un golpe cómo la salud de un espíritu se expresa en la superficie de la ropa, sus colores estridentes o apastelados, sus texturas rugosas o lisas, los movimientos de un baile, pero sobre todo, es capaz de ver la lucha de fuerzas que se da en los rostros y produce tal o cual gesto o rigidez, belleza que aumenta todas las funciones vitales o fealdad nauseabunda. No se trata de una afirmación imparcial, desinteresada y con validez universal, es el reconocimiento de un campo de batalla, un gusto político, fuerzas composibles o incomposibles, constructivas o destructivas. L.V. no está en posesión plena de este don porque su potencia es altamente destructiva y genera grandes malentendidos. Al mismo tiempo funciona como una forma de selección y evita caer en la trampa de las modas poco interesantes, los amiguismos o los vaivenes de tal o cual preocupación de época instalada. L.V. no compara rostros o movimientos contra un canon o gusto ya establecido, en eso radica su singularidad. No es que lo olvida, simplemente le es indiferente. Por eso muchas veces lo único que tiene para decir es “no me gusta ese olor”. <br>
+      </p> 
+      <i>En un individuo o en un pueblo, la cuestión de formar y situar el juicio de "belleza", es un problema de fuerza. El sentimiento de plenitud y de fuerza acumulada permite aceptar con valor y serenidad muchas cosas ante las cuales el débil tiembla, el sentimiento de poder expresa el juicio de "belleza" sobre realidades y estados de ánimos que el instinto de impotencia solo puede estimar como odiosas o feas. La deducción de cuanto sobre esto podríamos hacer, si nos viésemos ante un peligro, ante un problema, ante una tentación, determina, en cierta manera, nuestra aprobación estética. (Porque decir "esto es bello" es plantear una afirmación.)
+
+<br>
+        Friedrich Nietzsche
+<br> El Artista Trágico</i>
+      <br>
+      <br>
+      <b>Refrain 01</b>
+      <p>Para L.B.<br>
+      Hablamos con L.B. sobre fotografía y sobre diferentes fotógrafos. Nos detenemos a pensar en Jeff Wall. La pregunta es obvia: ¿por qué Jeff Wall saca fotos de escenas montadas que parecen espontaneas en vez de sacar fotos espontaneas y ya? El mismo Jeff Wall insiste con la artificialidad de la fotografía, lo repite en sus entrevistas. Con L.B. pensamos que hay una razón clara en los efectos: las fotografías de Jeff Wall están en una zona en la que espontaneidad y montaje, gracia y artificio se vuelven indescirnibles una de la otra y eso nos genera un gran placer. Pero no es un placer continuo, hedonista, sino que un placer con pulsaciones, ascensos y caídas: ciertas miradas y ciertas poses en la foto delatan que se trata de una escena dirigida por alguien, pero ciertos movimientos hacen creer que se trata de un retrato fugaz y espontaneo. Ese desfasaje trasciende al placer y, en vez de detenerse, el proceso continua. Es que probablemente se trate de ambas: la inspiración que surge después de extenuantes horas de preparación y el toque de gracia. Pero hay algo que nos importa más ¿por qué hacer todo ese esfuerzo cuando muy fácilmente se podría simular la escena con CGI y obtener el mismo resultado? No es que no se pueda, pero precisaría construir sus propios enlentecimientos, sus repeticiones, sus refrains. La cámara de fotos con sus restricciones técnicas, los actores con sus comportamientos y sus caprichos, la construcción o elección del set, funcionan como refrains o demoras que vuelven al proceso más lento, más pesado, menos ágil. Ese enlentecimiento, esa fricción cargan de impureza, o más bien, funcionan como un antídoto contra la pureza y enriquecen la imágen abriendola a la posibilidad de afirmar un mundo en sí mismo.<br></p>
         </p>
       <!-- Add more content here if needed -->
     </div>
