--- a/public/main.html
+++ b/public/main.html
@@ -452,6 +452,7 @@ In Front of a Nightclub<br>
       <p>Serla</p> 
       <br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/01.png" alt="Image 1"></a><br>
+   <a href="https://www.youtube.com/embed/BlgefTsb99I" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/01.jpg" alt="Image 1"></a><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=29s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/02.jpg" alt="Image 1"></a><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=77s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/03.jpg" alt="Image 1"></a><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=124s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/04.jpg" alt="Image 1"></a><br>
@@ -461,7 +462,6 @@ In Front of a Nightclub<br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=399s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/08.jpg" alt="Image 1"></a><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=454s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/09.jpg" alt="Image 1"></a><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=568s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/10.jpg" alt="Image 1"></a><br>
-      <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/11.jpg" alt="Image 1"></a><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/12.jpg" alt="Image 1"></a><br>
       <a href="https://www.youtube.com/embed/BlgefTsb99I&t=715s" target=”_blank><img class="lazyload" src="assets/img/27_tu amorosa/13.jpg" alt="Image 1"></a><br>
@@ -803,7 +803,8 @@ Deep Section<br>
 An architecture of mass arrive at transparency through a process of rarefaction
 developing a renewed model for multiple, even contradictory, faces and readings through the building section is a way to diverge from the modernist paradigm. <br>
  <br>
-      <video autoplay muted="muted" loop poster="assets/img/16_lab jesse reiser video/02.png" src="assets/img/16_lab jesse reiser video/02.mp4" alt="Video 2"></video>
+       <img class="lazyload" src="assets/img/15_lab jesse reiser/08.jpg" alt="Image 1">
+     <img class="lazyload" src="assets/img/15_lab jesse reiser/09.jpg" alt="Image 1">
 <br>
        <br><b>Thesis 03</b><br>
 Gothic Mies van der Rohe<br>
@@ -816,8 +817,7 @@ The virtue of the Miesian design model is its assumption that a rich and varied 
 Scales<br>
 A change in scale would have both quantitative and qualitative consequences. <br>
  <br>
-      <img class="lazyload" src="assets/img/15_lab jesse reiser/08.jpg" alt="Image 1">
-     <img class="lazyload" src="assets/img/15_lab jesse reiser/09.jpg" alt="Image 1">
+       <video autoplay muted="muted" loop poster="assets/img/16_lab jesse reiser video/02.png" src="assets/img/16_lab jesse reiser video/02.mp4" alt="Video 2"></video>
       <br><b>Thesis 05</b> <br>
 Miesian Neutral Datums<br>
 Ceiling is given to structure. Floor is plate or plinth. <br>
