--- a/public/main.html
+++ b/public/main.html
@@ -388,16 +388,41 @@ In Front of a Nightclub<br>
       <p>Galería Digital de Arte</p>
       <br>
       <p>Stagger</p>
+      <br>
+      <p>Paired stairs emanating from a center form an orderly labyrinth, creating a flitting yet recognizable path.
+Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
+shaping spatial evolution.</p>
+      <br>
       <img class="lazyload" src="assets/img/33_rooms/01.jpg" alt="Image 1">
+      <br>
+      <br>
       <p>Stagggger</p>
+      <br>
+      <p>Paired stairs emanating from a center form a challenging labyrinth, creating a shifting yet recognizable
+path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
+shaping spatial abundance.</p>
+      <br>
       <img class="lazyload" src="assets/img/33_rooms/02.jpg" alt="Image 1">
+      <br>
+      <br>
       <p>Stagggggger</p>
+      <br>
+      <p>Paired stairs emanating from a center form a complex labyrinth, creating a fleeting yet recognizable
+path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
+shaping spatial proliferation.</p>
+      <br>
       <img class="lazyload" src="assets/img/33_rooms/03.jpg" alt="Image 1">
+      <br>
+      <br>
       <p>Stagggggggger</p>
-      <img class="lazyload" src="assets/img/33_rooms/03.jpg" alt="Image 1">
-      <p>Stagggggggggger</p>
+      <br>
+      <p>Paired stairs emanating from a center form an inmense labyrinth, creating a variegated yet recognizable
+path. Each artwork is reached in awe. Staircases multiply, fold and craft arcs of variable height and form,
+shaping spatial profusion.</p>
+      <br>
       <img class="lazyload" src="assets/img/33_rooms/04.jpg" alt="Image 1">
-      
+      <br>
+      <br>
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
