--- a/public/main.html
+++ b/public/main.html
@@ -734,7 +734,7 @@ Publicado en <i>Superdigital (Editor: Ciro Najle. CPAU 2018)</i>
       <img class="lazyload" src="assets/img/10_el cuerpo hueco de la arquitectura/0-17.jpg" alt="Image 1">
       <img class="lazyload" src="assets/img/10_el cuerpo hueco de la arquitectura/0-19.jpg" alt="Image 1">
   <br>
-      <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
     </div>
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
@@ -749,6 +749,7 @@ Publicado en <i>Superdigital (Editor: Ciro Najle. CPAU 2018)</i>
        <br>
        <p>A new competition is hold. One winner is all there is. The winning architect says “A great white shiny box contains a great white shiny box that contains a great white shiny box that contains a great white shiny box that contains all the contemporary architecture”. There are four doors. This was repeated a total of thirteen times. There are thirteen doors. </p>
      <br> <img class="lazyload" src="assets/img/36_architecture postponed/03.jpg" alt="Image 1">
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
     </div>
    
