--- a/public/main.html
+++ b/public/main.html
@@ -273,7 +273,7 @@ Gilles Deleuze, <br>
 Literatura y Vida<br>
 Crítica y Clínica <br> </i> 
           <br>
-
+      <br>
 <b>Exceso 01</b> <br>
 <p>Para J.B. <br></p>
 <p>En un momento J.B. dice algo sobre la moda y los artistas: “para un artista es un problema caer en la moda”. Después le digo a J.B. que <i>1.Hay algo lindo en la idea de moda (fashionista) que es dejarse arrastrar por las olas que pasan con la confianza de que la singularidad persistirá. </i> Al leer ahora lo que escribí pienso “quién puede escribir así? La palabra <i>persistirá</i> me da vergüenza”. Pero ya sé donde está el error: en vez de haber dicho eso debería haber escrito sobre el “three arm sweater” de Issey Miyake. No puedo dejar de pensar en ese sweater desde que lo vi por primera vez y cada vez que alguien dice la palabra moda, o se refiere a la moda en algún sentido, pienso en el sweater de tres brazos de Issey Miyake. Me regocijo en el momento en el que el tercer brazo da la vuelta alrededor del cuello y pierde toda su radicalidad para distribuir el exceso de tela en un manojo de <i>plisses</i>. Describir su belleza, la forma que tiene de absorber todas las convenciones (el agujero para el cuello, el agujero para cada brazo, los largos..) y con un exceso mínimo, casi como si se tratara de un error de fabricación, darlas vuelta con mucha gracia.
@@ -318,8 +318,7 @@ Samuel Chavéz</i><br></p>
             <br>
           <br>
 <b>Diferencia 01</b> <br>
-<p>Para MsG</p><br>
-
+<p>Para MsG</p>
 <p>En un sueño MsG dice “el problema con lo que vos haces es que es demasiado complicado”. Está claro que se refiere a que, pudiendo hacer uso de mi gracia, voy en busca de algo más, cuando ese algo más ya estaba en la gracia de antemano. Complicar, en este contexto, sería no reconocer el valor de lo que ya está ahí. Su sugerencia es “no querer que nada nunca sea diferente de cómo es”. Luego le digo a MsG que el problema con lo que él hace es que es demasiado ingenuo. Cuando me dice que no me comprende le digo con más violencia que lo que él hace es inhibir y suprimir toda posibilidad de conflicto. Aunque no lo digo estoy hablando de la mala belleza, aplacadora, adormecedora y tranquilizadora del diseño y el arte o de cualquier otra cosa. Entre una posición y la otra, entre la violencia y el placer están muchas de las preguntas que exploramos juntos.
 
 <br><i>¿Cómo producir, y pensar, fragmentos que tengan entre sí relaciones de diferencia en tanto qué tal, que tengan como relaciones entre sí a su propia diferencia, sin referencias a una totalidad original incluso perdida, ni a una totalidad resultante incluso por llegar?
