--- a/public/main.html
+++ b/public/main.html
@@ -47,9 +47,12 @@
       <h3>Manuel Mensa</h3>
       <p>contacto@manuelmensa.com</p>
       <br> <p>Amenábar 2046, Piso 30, Buenos Aires, Argentina</p>
-      <!-- Add more content here if needed -->
+      <br>
+      <a href="#matters">Matters of Fact</a>
+      <a href="#casaJBRC">Casa J.B.R.C.</a>
+      <a href="#casaERCP">Casa E.R.C.P.</a>
     </div>
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div id="matters" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Matters of Fact</h3>
       <p>El Inevitable Sufrimiento de la Arquitectura</p>
       <br>
@@ -86,7 +89,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
 </p>
       <!-- Add more content here if needed -->
     </div>
-  <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+  <div id="casaJBRC" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Casa J.B.R.C.</h3>
       <p>Texto Descriptivo</p>
       <br>
@@ -182,7 +185,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
 Edición y secuenciación: Catalina Sfer Salas</p>
       <!-- Add more content here if needed -->
     </div>
-    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div id="casaERCP" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>Casa E.R.C.P.</h3>
       <p>Texto Descriptivo</p>
       <br>
