--- a/public/main.html
+++ b/public/main.html
@@ -267,8 +267,8 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <p>lorem ipsum dolor</p>
       <!-- Add more content here if needed -->
     </div>
-    <div id="creciendo" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>Creciendo en Público</h3>
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <h3 id="creciendo" class="anchor">Creciendo en Público</h3>
       <p>Newsletter Errático</p><br>
       <br>
       <a href="https://creciendoenpublico.substack.com/" target=”_blank”>https://creciendoenpublico.substack.com/</a><br>
@@ -375,7 +375,8 @@ In Front of a Nightclub<br>
 2006<br> </i></p>
       <!-- Add more content here if needed -->
     </div>
-     <div id="edificioSCW" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="edificioSCW"></span>
       <h3>Edificio S.C.W.</h3>
       <p>Saavedra, Buenos Aires</p>
        <br>
