--- a/public/main.html
+++ b/public/main.html
@@ -268,7 +268,8 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3 id="creciendo" class="anchor">Creciendo en Público</h3>
+      <span class="anchor" id="creciendo"></span>
+      <h3>Creciendo en Público</h3>
       <p>Newsletter Errático</p><br>
       <br>
       <a href="https://creciendoenpublico.substack.com/" target=”_blank”>https://creciendoenpublico.substack.com/</a><br>
