--- a/public/main.html
+++ b/public/main.html
@@ -47,9 +47,10 @@
       <h3>Manuel Mensa</h3>
       <p>contacto@manuelmensa.com</p>
       <br> <p>Amenábar 2046, Piso 30, Buenos Aires, Argentina</p>
-      <br><a href="#matters">Matters of Fact</a>
-      <br><a href="#casaJBRC">Casa J.B.R.C.</a>
-      <br><a href="#casaERCP">Casa E.R.C.P.</a>
+      <br><br> <p>Índice</p>
+      <br><br><br><a href="#matters">Matters of Fact / El Inevitable Sufrimiento de la Arquitectura</a>
+      <br><a href="#casaJBRC">Casa J.B.R.C. / Texto Descriptivo</a><a href="#casaJBRC2"> / Planos</a><a href="#casaJBRC3"> / Fotografías de Santiago Giusto</a><a href="#casaJBRC4"> / Series</a>
+      <br><a href="#casaERCP">Casa E.R.C.P. / Texto Descriptivo</a><a href="#casaERCP2"> / Planos</a><a href="#casaERCP3"> / Fotos</a>
       <br><a href="#casaFG">Casa F.G.</a>
       <br><a href="#creciendo">Creciendo en Público</a>
       <br><a href="#edificioSCW">Edificio S.C.W.</a>
@@ -63,7 +64,8 @@
       <br><a href="#ametralladora">Ametralladora de Utopías</a>
       <br><a href="#estados">Estados de la Arquitectura</a>
     </div>
-    <div id="matters" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="matters"></span>
       <h3>Matters of Fact</h3>
       <p>El Inevitable Sufrimiento de la Arquitectura</p>
       <br>
@@ -100,7 +102,8 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
 </p>
       <!-- Add more content here if needed -->
     </div>
-  <div id="casaJBRC" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+  <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="casaJBRC"></span>
       <h3>Casa J.B.R.C.</h3>
       <p>Texto Descriptivo</p>
       <br>
@@ -115,6 +118,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="casaJBRC2"></span>
       <h3>Casa J.B.R.C.</h3>
       <p>Planos</p>
       <br>
@@ -132,6 +136,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)" id="freesbeexsg">
+      <span class="anchor" id="casaJBRC3"></span>
       <h3>Casa J.B.R.C.</h3>
       <p>Fotografías de Santiago Giusto</p> 
       <br>
@@ -147,6 +152,7 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
       <!-- Add more content here if needed -->
     </div>
      <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="casaJBRC4"></span>
       <h3>Casa J.B.R.C.</h3>
       <p>Series</p>
       <br>
@@ -196,7 +202,8 @@ Publicado en: <i>Plot 69 (Buenos Aires, 2023)</i> y en <i>Universidad Torcuato D
 Edición y secuenciación: Catalina Sfer Salas</p>
       <!-- Add more content here if needed -->
     </div>
-    <div id="casaERCP" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="casaERCP"></span>
       <h3>Casa E.R.C.P.</h3>
       <p>Texto Descriptivo</p>
       <br>
@@ -208,6 +215,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="casaERCP2"></span>
       <h3>Casa E.R.C.P.</h3>
       <p>Planos</p>
       <br>
@@ -219,6 +227,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="casaERCP3"></span>
       <h3>Casa E.R.C.P.</h3>
       <p>Fotos</p>
       <br>
@@ -232,6 +241,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="casaFG"></span>
       <h3>Casa F.G.</h3>
       <p>Texto Descriptivo</p>
       <br>
@@ -242,7 +252,8 @@ Sed ut eros sit amet massa interdum varius. Maecenas pulvinar purus a augue fini
 Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravida. Nam sit amet magna sit amet nulla varius viverra. Integer id luctus lorem. Sed ornare lectus eget ante.</p>
       <!-- Add more content here if needed -->
     </div>
-    <div id="casaFG" class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+    <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="casaFG2"></span>
       <h3>Casa F.G.</h3>
       <p>Planos</p>
       <br>
@@ -253,6 +264,7 @@ Maecenas nec lobortis nunc. Phasellus suscipit nibh sit amet dui bibendum gravid
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
+      <span class="anchor" id="casaFG3"></span>
       <h3>Casa F.G.</h3>
       <p>Fotos</p>
       <br>
