--- a/public/main.html
+++ b/public/main.html
@@ -48,12 +48,12 @@
       <p>contacto@manuelmensa.com</p>
       <br> <p>Amenábar 2046, Piso 30, Buenos Aires, Argentina</p>
       <br><br> <p>Índice</p>
-      <br><br><br><a href="#matters">Matters of Fact / El Inevitable Sufrimiento de la Arquitectura</a>
+      <br><br><a href="#matters">Matters of Fact / El Inevitable Sufrimiento de la Arquitectura</a>
       <br><a href="#casaJBRC">Casa J.B.R.C. / Texto Descriptivo</a><a href="#casaJBRC2"> / Planos</a><a href="#casaJBRC3"> / Fotografías de Santiago Giusto</a><a href="#casaJBRC4"> / Series</a>
       <br><a href="#casaERCP">Casa E.R.C.P. / Texto Descriptivo</a><a href="#casaERCP2"> / Planos</a><a href="#casaERCP3"> / Fotos</a>
-      <br><a href="#casaFG">Casa F.G.</a>
-      <br><a href="#creciendo">Creciendo en Público</a>
-      <br><a href="#edificioSCW">Edificio S.C.W.</a>
+      <br><a href="#casaFG">Casa F.G. / Texto Descriptivo</a><a href="#casaFG2"> / Planos</a><a href="#casaFG3"> / Fotos</a>
+      <br><a href="#creciendo">Creciendo en Público / Newsletter Errático</a>
+      <br><a href="#edificioSCW">Edificio S.C.W. / Saavedra, Buenos Aires</a>
       <br><a href="#casaFKL">Casa F.K.L.</a>
       <br><a href="#erewhon">Erewhon</a>
       <br><a href="#muros">Muros, Puertas y Vanos</a>
