--- a/public/main.html
+++ b/public/main.html
@@ -49,20 +49,23 @@
       <br> <p>Amenábar 2046, Piso 30, Buenos Aires, Argentina</p>
       <br><br> <p>Índice</p>
       <br><br><a href="#matters">Matters of Fact / El Inevitable Sufrimiento de la Arquitectura</a>
-      <br><br><a href="#casaJBRC">Casa J.B.R.C. / Texto Descriptivo </a><a href="#casaJBRC2">/ Planos </a><a href="#casaJBRC3">/ Fotografías de Santiago Giusto </a><a href="#casaJBRC4">/ Series</a>
-      <br><a href="#casaERCP">Casa E.R.C.P. / Texto Descriptivo </a><a href="#casaERCP2">/ Planos </a><a href="#casaERCP3">/ Fotos</a>
-      <br><a href="#casaFG">Casa F.G. / Texto Descriptivo </a><a href="#casaFG2">/ Planos </a><a href="#casaFG3">/ Fotos</a>
-      <br><a href="#creciendo">Creciendo en Público / Newsletter Errático</a>
-      <br><a href="#edificioSCW">Edificio S.C.W. / Saavedra, Buenos Aires</a>
-      <br><a href="#casaFKL">Casa F.K.L. / Avenida de Mayo, Buenos Aires</a>
-      <br><a href="#erewhon">Erewhon / Galería Digital de Arte</a>
-      <br><a href="#muros">Muros, Puertas y Vanos / Hacia un Minimalismo Explosivo</a>
-      <br><a href="#cute-chitecture">Cute-chitecture / Arquitectura Póstuma</a>
-      <br><a href="#mothershiptheatre">MothershipTheatre / Thesis for an Opaque Architecture</a>
-      <br><a href="#sinestado">Arquitectura sin Estado / Albergues para Multitudes</a>
-      <br><a href="#vanguardias">Vanguardias o Nada / Manifiestos Prospectivos</a>
-      <br><a href="#ametralladora">Ametralladora de Utopías / Personajes Sensibles</a>
-      <br><a href="#estados">Estados de la Arquitectura / Seis Alegorías</a>
+      <br><br><a href="#casaJBRC">Casa J.B.R.C. / Texto Descriptivo </a>
+      <br><a href="#casaJBRC2">              / Planos </a>
+      <br><a href="#casaJBRC3">              / Fotografías de Santiago Giusto </a>
+      <br><a href="#casaJBRC4">              / Series</a>
+      <br><br><a href="#casaERCP">Casa E.R.C.P. / Texto Descriptivo </a><a href="#casaERCP2">/ Planos </a><a href="#casaERCP3">/ Fotos</a>
+      <br><br><a href="#casaFG">Casa F.G. / Texto Descriptivo </a><a href="#casaFG2">/ Planos </a><a href="#casaFG3">/ Fotos</a>
+      <br><br><a href="#creciendo">Creciendo en Público / Newsletter Errático</a>
+      <br><br><a href="#edificioSCW">Edificio S.C.W. / Saavedra, Buenos Aires</a>
+      <br><br><a href="#casaFKL">Casa F.K.L. / Avenida de Mayo, Buenos Aires</a>
+      <br><br><a href="#erewhon">Erewhon / Galería Digital de Arte</a>
+      <br><br><a href="#muros">Muros, Puertas y Vanos / Hacia un Minimalismo Explosivo</a>
+      <br><br><a href="#cute-chitecture">Cute-chitecture / Arquitectura Póstuma</a>
+      <br><br><a href="#mothershiptheatre">MothershipTheatre / Thesis for an Opaque Architecture</a>
+      <br><br><a href="#sinestado">Arquitectura sin Estado / Albergues para Multitudes</a>
+      <br><br><a href="#vanguardias">Vanguardias o Nada / Manifiestos Prospectivos</a>
+      <br><br><a href="#ametralladora">Ametralladora de Utopías / Personajes Sensibles</a>
+      <br><br><a href="#estados">Estados de la Arquitectura / Seis Alegorías</a>
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <span class="anchor" id="matters"></span>
